@@ -1,3 +1,10 @@
+Thu Jun 10 10:06:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* io.c (rb_io_putc): documentation updated to mention putc would
+	  not work well with multi-byte characters.  [ruby-core:30697]
+
+	* io.c (rb_f_putc): ditto.
+
 Tue Jun  8 22:14:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/etc/etc.c (etc_systmpdir): moved from ext/tmpdir.
